src/draw-context.cpp closing a segment now remains snapped. Lots of snapping fixes.
(bzr r859)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-06 Nathan Hurst <njh@mail.csse.monash.edu.au>
+
+	* src/draw-context.cpp closing a segment now remains snapped.
+	Lots of snapping fixes.
+	
 2004-01-05 MenTaLguY <mental@rydia.net>
 
 	* src/uri-references.cpp, src/uri-references.h,
