--- a/AUTHORS
+++ b/AUTHORS
@@ -23,7 +23,7 @@ Raph Levien
 Vitaly Lipatov
 Dmitry G. Mastrukov
 Michael Meeks
-Frederico Mena
+Federico Mena
 MenTaLguY
 Peter Moulder
 Yukihiro Nakai
