--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 	  unsignedness warning (thus fixing a minor buglet).
 
 	* Too many files to list (58 .cpp files, phew!): Address `missing
-	  initializer for value_table' warnings.
+	  initializer for member _GTypeInfo::value_table' warnings.
 
 	* src/libnr/nr-values.h, src/libnr/nr-values.cpp: Add `Point
 	  component_vectors[2]' global constant (moved from desktop-snap.cpp).
