Slight restructuring using snprintf instead of strlen/memcpy.
(bzr r992)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/sp-text.cpp (sp_text_font_style_to_lookup),
+	src/dialogs/text-edit.cpp
+	(sp_text_edit_dialog_font_style_to_lookup): Slight restructuring
+	using g_snprintf instead of less readable (& slightly less
+	efficient in this case) strlen/memcpy.
+
 	* src/sp-metrics.h: Increase precision of PT_PER_CM etc.
 	Add FIXME comment.
 
