--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,27 @@
 	* src/sp-text.cpp (sp_text_font_style_to_lookup): Fix segfault I
 	introduced, reported by ishmal.
 
+2004-01-12  bulia byak <bulia@users.sourceforge.net>
+
+	* src/sp-rect.cpp: Removed coordinates from rect description
+
+	* src/selection-chemistry.cpp: Delete fix from sodipodi, more statusbar diagnostics
+
+	* src/prefs-utils.cpp,h: New functions for setting/getting string values
+
+	* src/dialogs/export.cpp: Export dialog tracks selection and document changes (fix for
+	853849). Export area, dpi remembered in prefs. Misc fixes and cleanups
+
+	* src/preferences-skeleton.h: New options for export: exportarea, defaultxdpi
+
+	* src/widgets/spw-utilities.cpp,h: New function for recursively searching widgets for
+	key/value pair
+
+	* src/svg/svg-affine.cpp: Ignore whitespace at the end of transform attribute - fix
+	for 850943 (from sodipodi)
+
+	* src/select-toolbar.cpp: Correctly handle zero dimensions - fix for 871552
+
 2004-01-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/sp-gradient.cpp (sp_gradient_repr_set_vector): "Fix" a memory
