--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-01-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-text.cpp (sp_text_font_style_to_lookup),
+	src/dialogs/text-edit.cpp (sp_text_edit_dialog_font_style_to_lookup):
+	Move this duplicated function to src/libnrtype/font-style-to-pos.cpp
+	as font_style_to_pos, rewriting & fixing its bugs in the process.
+	Adjust callers.
+	* src/libnrtype/font-style-to-pos.cpp, src/libnrtype/font-style-to-pos.h:
+	New files.
+	* src/libnrtype/Makefile.am: Mention the new files.
+	* src/libnrtype/nr-type-pos-def.h: Make the default constructor fill in
+	sensible values.
+	Add constants for CSS weight numbers.
+
 2004-01-13 MenTaLguY  <mental@rydia.net>
 
 	* src/object-ui.cpp: 'Fill Settings' -> 'Fill and Stroke'
