--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/dialogs/stroke-style.cpp (sp_stroke_style_paint_update_repr): fix
+	bug with unsigned->float alpha conversion.
+
 	* src/nodepath.cpp (angle_normalize): Remove no-longer-used function.
 
 	* src/draw-context.cpp (spdc_endpoint_snap_internal): Fix for
